--- a/index.css
+++ b/index.css
@@ -17,6 +17,42 @@ html {
     scroll-behavior: smooth;
 }
 
+.loader_wrapper {
+    position: fixed;
+    z-index: 20;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #040404;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition-property: opacity, visibility;
+    transition-duration: 1s;
+}
+
+.loader_wrapper.loaded {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.loader {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    border: 8px solid #2b2929;
+    border-left-color: #7633f9;
+    -webkit-animation: loader-spin 1s linear infinite;
+    animation: loader-spin 1s linear infinite;
+}
+
+@keyframes loader-spin {
+    100% {
+        transform: rotate( 1turn);
+    }
+}
+
 .portfolio_wrapper {
     height: 100vh;
     width: 100%;
