--- a/index.css
+++ b/index.css
@@ -53,6 +53,10 @@ html {
     }
 }
 
+.nav_current {
+    color: #9273cd!important;
+}
+
 .portfolio_wrapper {
     height: 100vh;
     width: 100%;
